@@ -37,7 +37,7 @@ INCLUDES = -I. -I$(TOPDIR)/include -I$(KERNELINC) -I$(GCCINC)
 WARNINGS = -Wall -Wstrict-prototypes
 
 CPPFLAGS = -nostdinc $(MODVERSIONS)
-CFLAGS = -O2 -g -fomit-frame-pointer $(WARNINGS) $(MCMODEL)
+CFLAGS += -fomit-frame-pointer $(WARNINGS) $(MCMODEL)
 LDADD = -nostdlib
 
 MODULES = oracleasm.o
@@ -52,7 +52,7 @@ HEADERS =					\
 	$(TOPDIR)/include/linux/asmdisk.h	\
 	$(TOPDIR)/include/asmerror.h
 
-osm.o: $(HEADERS)
+oracleasm.o: $(HEADERS)
 
 INSTALL_RULES = install-asm
 
